--- a/Chat_with_YT.ipynb
+++ b/Chat_with_YT.ipynb
@@ -39,7 +39,7 @@
       "outputs": [],
       "source": [
         "from google.colab import drive\n",
-        "drive.mount('/content/drive') # mounting a drive is different than changing directory, this command is only giving the notebook access to your Google Drive Folders"
+        "drive.mount('/content/drive') # mounting a drive is different than changing directory, this command is only giving the notebook access to your Google Drive Folders. Be sure to mount a folder that is in your Google Drive"
       ]
     },
     {
@@ -51,7 +51,7 @@
       "outputs": [],
       "source": [
         "# chaning directory now that drive is mounted\n",
-        "%cd '/content/drive/MyDrive/Lonely Octopus/Lunch and Learn'\n",
+        "%cd '/content/PATH/TO/YOUR/DRIVE'\n",
         "!pwd"
       ]
     },
